objects/FSL__Territory_Optimization_Request__c.object
<CustomObject>
    <fields>
        <fullName>FSL__AvgResponseTimeForSasWithWindowAfter__c</fullName>
        <description>Average response time after optimization (with arrival window).</description>
        <label>Response Time After (with Window)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgResponseTimeForSasWithWindowBefore__c</fullName>
        <description>Average response time before optimization (with arrival window).</description>
        <label>Response Time Before (with Window)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgResponseTimeForSasWoWindowAfter__c</fullName>
        <description>Average response time after optimization (without arrival window).</description>
        <label>Response Time After (without Window)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgResponseTimeForSasWoWindowBefore__c</fullName>
        <description>Average response time before optimization (without arrival window).</description>
        <label>Response Time Before (without Window)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeAfter__c</fullName>
        <label>Avg Travel Per Service With Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeBefore__c</fullName>
        <label>Avg Travel Per Service With Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeWithoutHomeAfter__c</fullName>
        <label>Avg Travel Per Service w/o Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__AvgTravelTimeWithoutHomeBefore__c</fullName>
        <label>Avg Travel Per Service w/o Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NonCapacityBasedServicesAfter__c</fullName>
        <label>Non Capacity Based Services After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NonCapacityBasedServicesBefore__c</fullName>
        <label>Non Capacity Based Services Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumOfScheduledSasToCapacityAfter__c</fullName>
        <description>Appointments assigned to capacity-based resources after optimization.</description>
        <label>Other Assigned Appointments After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumOfScheduledSasToCapacityBefore__c</fullName>
        <description>Appointments assigned to capacity-based resources before optimization.</description>
        <label>Other Assigned Appointments Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumOfScheduledSasToCrewAfter__c</fullName>
        <label>Appointments Assigned to Crews After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumOfScheduledSasToCrewBefore__c</fullName>
        <label>Appointments Assigned to Crews Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumOfScheduledSasToResourcesAfter__c</fullName>
        <description>Appointments assigned to resources after optimization.</description>
        <label>Resource Assigned Appointments After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumOfScheduledSasToResourcesBefore__c</fullName>
        <description>Appointments assigned to resources before optimization.</description>
        <label>Resource Assigned Appointments Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfSasSchedToPreferredSrAfter__c</fullName>
        <description>Appointments assigned to preferred resources after optimization.</description>
        <label>Preferred Resource Appointments After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfSasSchedToPreferredSrBefore__c</fullName>
        <description>Appointments assigned to preferred resources before optimization.</description>
        <label>Preferred Resource Appointments Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfSasWithPreferredResource__c</fullName>
        <description>Total appointments assigned to preferred resources.</description>
        <label>Preferred Resource Assigned Appointments</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfUnscheduledCapacityAfter__c</fullName>
        <description>Other refers to capacity-based resources.</description>
        <label>Other Unscheduled Resources After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfUnscheduledCapacityBefore__c</fullName>
        <description>Other refers to capacity-based resources.</description>
        <label>Other Unscheduled Resources Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfUnscheduledCrewAfter__c</fullName>
        <label>Unscheduled Crews After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfUnscheduledCrewBefore__c</fullName>
        <label>Unscheduled Crews Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfUnscheduledResourcesAfter__c</fullName>
        <label>Unscheduled Resources After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfUnscheduledResourcesBefore__c</fullName>
        <label>Unscheduled Resources Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Optimization_Request__c</fullName>
        <label>Optimization Request</label>
        <referenceTo>FSL__Optimization_Request__c</referenceTo>
        <relationshipLabel>Territory Optimization Requests</relationshipLabel>
        <relationshipName>Territory_Optimization_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__ServiceTerritory__c</fullName>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Territory Optimization Requests</relationshipLabel>
        <relationshipName>Territory_Optimization_Requests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__TotalCrewWorkCapacity__c</fullName>
        <label>Crews Availability</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalLunchBreakDurationAfter__c</fullName>
        <label>Lunch Break After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalLunchBreakDurationBefore__c</fullName>
        <label>Lunch Break Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNaWithGeolocationDurationAfter__c</fullName>
        <label>Non Availability With Travel After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNaWithGeolocationDurationBefore__c</fullName>
        <label>Non Availability With Travel Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNaWoGeolocationDurationAfter__c</fullName>
        <label>Non Availability Without Travel After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNaWoGeolocationDurationBefore__c</fullName>
        <label>Non Availability Without Travel Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfCapacityBasedResources__c</fullName>
        <label>Number of Capacity-Based Resources</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfCrews__c</fullName>
        <label>Number Of Crews</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfOptimizableServices__c</fullName>
        <label>Optimizable Appointments</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfPinnedServices__c</fullName>
        <label>Pinned Appointments</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfResources__c</fullName>
        <label>Number of Resources</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfScheduledServicesAfter__c</fullName>
        <label>Scheduled Appointments After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfScheduledServicesBefore__c</fullName>
        <label>Scheduled Appointments Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfServicesWithWindow__c</fullName>
        <label>Appointments With Arrival Window</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalNumberOfServicesWithoutWindow__c</fullName>
        <label>Appointments Without Arrival Window</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalOvertimeForCrews__c</fullName>
        <label>Crews Overtime</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalOvertimeForResources__c</fullName>
        <label>Resources Overtime</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalScheduledTimeOnOvertimeAfter__c</fullName>
        <label>Scheduled Overtime After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalScheduledTimeOnOvertimeBefore__c</fullName>
        <label>Scheduled Overtime Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelByPrimaryMembershipAfter__c</fullName>
        <label>Total Travel By Primary STM After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelByPrimaryMembershipBefore__c</fullName>
        <label>Total Travel By Primary STM Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelDistanceFromHomebaseAfter__c</fullName>
        <label>Distance from Homebase After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelDistanceFromHomebaseBefore__c</fullName>
        <label>Distance from Homebase Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelDistanceToHomebaseAfter__c</fullName>
        <label>Distance to Homebase After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelDistanceToHomebaseBefore__c</fullName>
        <label>Distance to Homebase Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelDistanceWoHomebaseAfter__c</fullName>
        <label>Distance Between Appointments After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelDistanceWoHomebaseBefore__c</fullName>
        <label>Distance Between Appointments Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeAfter__c</fullName>
        <label>Total Travel With Home After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeBefore__c</fullName>
        <label>Total Travel With Home Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeFromHomebaseAfter__c</fullName>
        <label>Travel Time from Homebase After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeFromHomebaseBefore__c</fullName>
        <label>Travel Time from Homebase Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeToHomebaseAfter__c</fullName>
        <label>Travel Time to Homebase After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeToHomebaseBefore__c</fullName>
        <label>Travel Time to Homebase Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeWithoutHomeAfter__c</fullName>
        <label>Travel Time Between Appointments After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalTravelTimeWithoutHomeBefore__c</fullName>
        <label>Travel Time Between Appointments Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkCapacity__c</fullName>
        <label>Resources Availability</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkDurationScheduledAfter__c</fullName>
        <label>Scheduled Appointments Duration After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkDurationScheduledBefore__c</fullName>
        <label>Scheduled Appointments Duration Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TotalWorkTime__c</fullName>
        <label>Duration of All Appointments</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TravelTimeOnTheResourcesExpenseAfter__c</fullName>
        <label>Travel Time at Resource’s Expense After</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__TravelTimeOnTheResourcesExpenseBefore__c</fullName>
        <label>Travel Time at Resource’s Expense Before</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationTotalAfter__c</fullName>
        <label>Utilization Total After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationTotalBefore__c</fullName>
        <label>Utilization Total Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationWrenchAfter__c</fullName>
        <label>Utilization Wrench After</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UtilizationWrenchBefore__c</fullName>
        <label>Utilization Wrench Before</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Territory Optimization Request</label>
    <nameField>
        <displayFormat>LOR-{00000}</displayFormat>
        <label>Territory Optimization Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Optimization Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>